First python <-> c++ execution of basic commands.
Successfully executes commands such as

  load_tracks foo.kwxml
  write_tracks bar.kwxml 1

woo-hoo!

--- a/api/CMakeLists.txt
+++ b/api/CMakeLists.txt
@@ -1,1 +1,10 @@
 kwiver_add_executable( scoring_session_backend scoring_session_backend.cxx )
+
+# todo: flag track_oracle, json as mandatory
+
+target_link_libraries(
+  scoring_session_backend
+  track_oracle
+  track_oracle_file_formats
+  ${LIBJSON_LIBRARY}
+)
